--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -124,15 +124,23 @@
             <%= image_tag 'samples/logos/platinum/nimble.png', :style => "height: 40px" %>
           <% end %>
 
+          <%= link_to 'http://getlinks.co', {:class => 'hvr-float-shadow'}  do %>
+            <%= image_tag 'samples/logos/platinum/links.png', :style => "height: 80px" %>
+          <% end %>
+
           <%= link_to 'https://www.facebook.com/DrinkentrepreneurBangkok', {:class => 'hvr-float-shadow'}  do %>
             <%= image_tag 'samples/logos/platinum/drink.png', :style => "height: 120px" %>
           <% end %>
 
-          <%= link_to 'http://getlinks.co', {:class => 'hvr-float-shadow'}  do %>
-            <%= image_tag 'samples/logos/platinum/links.png', :style => "height: 100px" %>
+          <%= link_to 'http://jobnisit.com', {:class => 'hvr-float-shadow'}  do %>
+            <%= image_tag 'samples/logos/platinum/jobnisit.png', :style => "height: 50px" %>
           <% end %>
-        </div>
 
+          <%= link_to 'http://webcoursesbangkok.com', {:class => 'hvr-float-shadow'}  do %>
+            <%= image_tag 'samples/logos/platinum/webcourses.png', :style => "height: 70px" %>
+          <% end %>
+
+        </div>
       </section>
 
 
@@ -268,7 +276,7 @@
         <div class="time">18:45 AM</div>
         <h4>Sakchai "Zack" Siripanyawuth <span>Codemy / CTO Uteeni</span></h4>
         <p><span>
-          Building your first Rails app
+          Migrating to a containerized, service-oriented architecture 
         </span></p>
         <p class="summary">
           Zack does tech training and is training developers from scratch or 
