--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -56,27 +56,27 @@
             Platinum Sponsors
           </h3>
           <hr>
-          <%= link_to 'http://www.uteeni.com', {:class => 'hvr-float-shadow'}  do %>
+          <%= link_to 'http://www.uteeni.com', target: '_blank' ,class: 'hvr-float-shadow' do %>
             <%= image_tag 'samples/logos/platinum/uteeni.png', :style => "height: 120px" %>
           <% end %>
 
-          <%= link_to 'https://www.omise.co', {:class => 'hvr-float-shadow'}  do %>
+          <%= link_to 'https://www.omise.co', target: '_blank', class: 'hvr-float-shadow' do %>
             <%= image_tag 'samples/logos/platinum/omise.png', :style => "height: 70px" %>
           <% end %>
 
-          <%= link_to 'http://www.playlab.com', {:class => 'hvr-float-shadow'}  do %>
+          <%= link_to 'http://www.playlab.com', target: '_blank', class: 'hvr-float-shadow' do %>
             <%= image_tag 'samples/logos/platinum/pocket-play.png', :style => "height: 70px" %>
           <% end %>
 
-          <%= link_to 'http://www.oozou.com', {:class => 'hvr-float-shadow'}  do %>
+          <%= link_to 'http://www.oozou.com', target: '_blank', class: 'hvr-float-shadow' do %>
             <%= image_tag 'samples/logos/platinum/oozou.png', :style => "height: 60px" %>
           <% end %>
 
-          <%= link_to 'http://hubbathailand.com', {:class => 'hvr-float-shadow'}  do %>
+          <%= link_to 'http://hubbathailand.com', target: '_blank', class: 'hvr-float-shadow' do %>
             <%= image_tag 'samples/logos/platinum/hubba.png' %>
           <% end %>
 
-          <%= link_to 'http://angel.co', {:class => 'hvr-float-shadow'}  do %>
+          <%= link_to 'http://angel.co', target: '_blank', class: 'hvr-float-shadow' do %>
             <%= image_tag 'samples/logos/platinum/angellist.png', :style => "height: 50px" %>
           <% end %>          
         </div>
@@ -88,27 +88,27 @@
           </h3>
           <hr style="margin-bottom: 55px;">
 
-          <%= link_to 'https://www.techinasia.com', {:class => 'hvr-float-shadow'}  do %>
+          <%= link_to 'https://www.techinasia.com', target: '_blank', class: 'hvr-float-shadow' do %>
             <%= image_tag 'samples/logos/platinum/tech.png', :style => "height: 60px"  %>
           <% end %>
 
-          <%= link_to 'http://www.e27.co', {:class => 'hvr-float-shadow'}  do %>
+          <%= link_to 'http://www.e27.co', target: '_blank', class: 'hvr-float-shadow' do %>
             <%= image_tag 'samples/logos/platinum/e27.png', :style => "height: 60px" %>
           <% end %>
 
-          <%= link_to 'http://www.github.com', {:class => 'hvr-float-shadow'}  do %>
+          <%= link_to 'http://www.github.com', target: '_blank', class: 'hvr-float-shadow' do %>
             <%= image_tag 'samples/logos/platinum/github.png' %>
           <% end %>
 
-          <%= link_to 'http://www.findyourspace.co/', {:class => 'hvr-float-shadow'}  do %>
+          <%= link_to 'http://www.findyourspace.co/', target: '_blank', class: 'hvr-float-shadow' do %>
             <%= image_tag 'samples/logos/platinum/find-your-space.png' %>
           <% end %>
 
-          <%= link_to 'https://aws.amazon.com', {:class => 'hvr-float-shadow'}  do %>
+          <%= link_to 'https://aws.amazon.com', target: '_blank', class: 'hvr-float-shadow' do %>
             <%= image_tag 'samples/logos/platinum/amazonWS.png' %>
           <% end %>
 
-          <%= link_to 'https://www.page365.net', {:class => 'hvr-float-shadow'}  do %>
+          <%= link_to 'https://www.page365.net', target: '_blank', class: 'hvr-float-shadow' do %>
             <%= image_tag 'samples/logos/platinum/Page365.png', :style => "height: 60px" %>
           <% end %>
         </div>
@@ -120,23 +120,23 @@
           </h3>
           <hr style="margin-bottom: 42px;">
 
-          <%= link_to 'https://github.com/nimbl3/our-team/tree/master/openings', {:class => 'hvr-float-shadow'}  do %>
+          <%= link_to 'https://github.com/nimbl3/our-team/tree/master/openings', target: '_blank', class: 'hvr-float-shadow' do %>
             <%= image_tag 'samples/logos/platinum/nimble.png', :style => "height: 40px" %>
           <% end %>
 
-          <%= link_to 'http://getlinks.co', {:class => 'hvr-float-shadow'}  do %>
+          <%= link_to 'http://getlinks.co', target: '_blank', class: 'hvr-float-shadow' do %>
             <%= image_tag 'samples/logos/platinum/links.png', :style => "height: 80px" %>
           <% end %>
 
-          <%= link_to 'https://www.facebook.com/DrinkentrepreneurBangkok', {:class => 'hvr-float-shadow'}  do %>
+          <%= link_to 'https://www.facebook.com/DrinkentrepreneurBangkok', target: '_blank', class: 'hvr-float-shadow' do %>
             <%= image_tag 'samples/logos/platinum/drink.png', :style => "height: 120px" %>
           <% end %>
 
-          <%= link_to 'http://jobnisit.com', {:class => 'hvr-float-shadow'}  do %>
+          <%= link_to 'http://jobnisit.com', target: '_blank', class: 'hvr-float-shadow' do %>
             <%= image_tag 'samples/logos/platinum/jobnisit.png', :style => "height: 45px" %>
           <% end %>
 
-          <%= link_to 'http://webcoursesbangkok.com', {:class => 'hvr-float-shadow'}  do %>
+          <%= link_to 'http://webcoursesbangkok.com', target: '_blank', class: 'hvr-float-shadow' do %>
             <%= image_tag 'samples/logos/platinum/webcourses.png', :style => "height: 70px" %>
           <% end %>
 
