--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -533,7 +533,7 @@
         <div class="time">03.00 PM</div>
         <h4>TBA <span>Breaking the Habits Inc.</span></h4>
         <p>Topic: <span></span><p>
-        <p class="summary">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+        <p class="summary">Cum socis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
       </div>
     </div>
   </div><!-- /tentative -->
