Add angelhack logo

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -61,7 +61,7 @@
           <% end %>
 
           <%= link_to 'https://www.omise.co', target: '_blank', class: 'hvr-float-shadow' do %>
-            <%= image_tag 'samples/logos/platinum/omise.png', :style => "height: 70px" %>
+            <%= image_tag 'samples/logos/platinum/omise.png', :style => "height: 60px" %>
           <% end %>
 
           <%= link_to 'http://www.playlab.com', target: '_blank', class: 'hvr-float-shadow' do %>
@@ -69,8 +69,12 @@
           <% end %>
 
           <%= link_to 'http://www.oozou.com', target: '_blank', class: 'hvr-float-shadow' do %>
-            <%= image_tag 'samples/logos/platinum/oozou.png', :style => "height: 60px" %>
+            <%= image_tag 'samples/logos/platinum/oozou.png', :style => "height: 55px" %>
           <% end %>
+
+          <%= link_to 'http://angelhack.com', target: '_blank', class: 'hvr-float-shadow' do %>
+            <%= image_tag 'samples/logos/platinum/angelhack.png', :style => "height: 90px" %>
+          <% end %>   
 
           <%= link_to 'http://hubbathailand.com', target: '_blank', class: 'hvr-float-shadow' do %>
             <%= image_tag 'samples/logos/platinum/hubba.png' %>
