Change font sizes and add margin

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -52,7 +52,7 @@
 
 
         <div class="sponsors-container platinum">
-          <h3>
+          <h3 style="font-size: 72px">
             Platinum Sponsors
           </h3>
           <hr>
@@ -82,12 +82,16 @@
 
           <%= link_to 'http://angel.co', target: '_blank', class: 'hvr-float-shadow' do %>
             <%= image_tag 'samples/logos/platinum/angellist.png', :style => "height: 50px" %>
-          <% end %>          
+          <% end %>
+
+          <%= link_to 'http://appsynth.net', target: '_blank', class: 'hvr-float-shadow' do %>
+            <%= image_tag 'samples/logos/platinum/appsynth.png', :style => "height: 50px" %>
+          <% end %>   
         </div>
 
 
         <div class="sponsors-container gold">
-          <h3>
+          <h3 style="font-size: 60px">
             Gold Sponsors
           </h3>
           <hr style="margin-bottom: 55px;">
