Add Kaidee and Sanook sponsorship logos

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -79,14 +79,26 @@
           <%= link_to 'http://hubbathailand.com', target: '_blank', class: 'hvr-float-shadow' do %>
             <%= image_tag 'samples/logos/platinum/hubba.png' %>
           <% end %>
-
+          <br>
           <%= link_to 'http://angel.co', target: '_blank', class: 'hvr-float-shadow' do %>
             <%= image_tag 'samples/logos/platinum/angellist.png', :style => "height: 50px" %>
+          <% end %>
+
+          <%= link_to 'http://sanook.com', target: '_blank', class: 'hvr-float-shadow' do %>
+            <%= image_tag 'samples/logos/platinum/sanook.png', :style => "height: 70px" %>
+          <% end %>
+
+          <%= link_to 'http://kaidee.com', target: '_blank', class: 'hvr-float-shadow' do %>
+            <%= image_tag 'samples/logos/platinum/kaidee.png', :style => "height: 70px" %>
           <% end %>
 
 
           <%= link_to 'http://appsynth.net', target: '_blank', class: 'hvr-float-shadow' do %>
             <%= image_tag 'samples/logos/platinum/appsynth.png', :style => "height: 50px" %>
+          <% end %>
+
+          <%= link_to 'http://telenor.com/', target: '_blank', class: 'hvr-float-shadow' do %>
+            <%= image_tag 'samples/logos/platinum/telenor.png', :style => "height: 80px" %>
           <% end %>
 
         </div>
