Add additional speakers for next event

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -451,7 +451,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <%= image_tag 'samples/avatar-3.jpg' %>
+        <%= image_tag 'samples/logos/platinum/kaidee.png', style: 'margin-top: 35px'  %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <!-- <div class="social">
@@ -460,7 +460,7 @@
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
         </div> -->
         <div class="time">10.00 AM</div>
-        <h4>TBA <span>BlackHat Linux Inc.</span></h4>
+        <h4>TBA <span>Kaidee</span></h4>
         <p>Topic: <span></span><p>
         <p class="summary">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
       </div>
@@ -471,7 +471,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <%= image_tag 'samples/avatar-4.jpg' %>
+        <%= image_tag 'samples/logos/platinum/github.png' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <!-- <div class="social">
@@ -480,7 +480,7 @@
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
         </div> -->
         <div class="time">11.00 AM</div>
-        <h4>TBA <span>Open Source Fanatics</span></h4>
+        <h4>TBA <span>Github</span></h4>
         <p>Topic: <span></span><p>
         <p class="summary">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
       </div>
@@ -491,7 +491,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <%= image_tag 'samples/avatar-5.jpg' %>
+        <%= image_tag 'samples/logos/platinum/telenor.png', style: 'margin-top: 35px' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <!-- <div class="social">
@@ -500,7 +500,7 @@
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
         </div> -->
         <div class="time">12.00 AM</div>
-        <h4>TBA <span>Designer Wall Inc.</span></h4>
+        <h4>TBA <span>Telenor</span></h4>
         <p>Topic: <span></span><p>
         <p class="summary">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
       </div>
@@ -524,7 +524,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-       <%= image_tag 'samples/avatar-6.jpg' %>
+       <%= image_tag 'samples/logos/platinum/appsynth.png', style: 'margin-top: 35px'  %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <!-- <div class="social">
@@ -533,7 +533,7 @@
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
         </div> -->
         <div class="time">02.00 PM</div>
-        <h4>TBA <span>Smashing the Wall</span></h4>
+        <h4>TBA <span>Appsynth</span></h4>
         <p>Topic: <span></span><p>
         <p class="summary">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
       </div>
@@ -544,7 +544,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <%= image_tag 'samples/avatar-7.jpg' %>
+        <%= image_tag 'samples/start.png' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <!-- <div class="social">
@@ -556,59 +556,6 @@
         <h4>TBA <span>Breaking the Habits Inc.</span></h4>
         <p>Topic: <span></span><p>
         <p class="summary">Cum socis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-      </div>
-    </div>
-  </div><!-- /tentative -->
-
-
-  <div class="tentative">
-    <div class="row">
-      <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <%= image_tag 'samples/avatar-8.jpg' %>
-      </div>
-      <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
-        <!-- <div class="social">
-          <a href="#"><i class="fa fa-facebook-square"></i></a>
-          <a href="#"><i class="fa fa-twitter-square"></i></a>
-          <a href="#"><i class="fa fa-google-plus-square"></i></a>
-        </div> -->
-        <div class="time">04.00 PM</div>
-        <h4>TBA <span>Positive Design Inc.</span></h4>
-        <p>Topic: <span></span><p>
-        <p class="summary">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-      </div>
-    </div>
-  </div><!-- /tentative -->
-
-
-  <div class="tentative">
-    <div class="row">
-      <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <%= image_tag 'samples/break.jpg' %>
-      </div>
-      <div class="title col-lg-10 col-md-10 col-sm-10 col-xs-9">
-        <div class="time">05.00 PM</div>
-        <h4>TBA</h4>
-      </div>
-    </div>
-  </div><!-- /tentative -->
-
-
-  <div class="tentative">
-    <div class="row">
-      <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <%= image_tag 'samples/avatar-9.jpg' %>
-      </div>
-      <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
-        <!-- <div class="social">
-          <a href="#"><i class="fa fa-facebook-square"></i></a>
-          <a href="#"><i class="fa fa-twitter-square"></i></a>
-          <a href="#"><i class="fa fa-google-plus-square"></i></a>
-        </div> -->
-        <div class="time">05.30 PM</div>
-        <h4>TBA <span>Source Code Inc.</span></h4>
-        <p>Topic: <span></span><p>
-        <p class="summary">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
       </div>
     </div>
   </div><!-- /tentative -->
