Add Amazon logo to second conference

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -451,7 +451,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <%= image_tag 'samples/logos/platinum/kaidee.png', style: 'margin-top: 35px'  %>
+        <%= image_tag 'samples/logos/platinum/kaidee.png', class: 'remove-br', style: 'margin-top: 35px'  %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <!-- <div class="social">
@@ -471,7 +471,26 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <%= image_tag 'samples/logos/platinum/github.png' %>
+        <%= image_tag 'samples/logos/platinum/amazonWS.png', class: 'remove-br', style: 'margin-top: 35px'  %>
+      </div>
+      <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
+        <!-- <div class="social">
+          <a href="#"><i class="fa fa-facebook-square"></i></a>
+          <a href="#"><i class="fa fa-twitter-square"></i></a>
+          <a href="#"><i class="fa fa-google-plus-square"></i></a>
+        </div> -->
+        <div class="time">10.00 AM</div>
+        <h4>TBA <span>Amazon</span></h4>
+        <p>Topic: <span></span><p>
+        <p class="summary">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+      </div>
+    </div>
+  </div><!-- /tentative -->
+
+  <div class="tentative">
+    <div class="row">
+      <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
+        <%= image_tag 'samples/logos/platinum/github.png', class: 'remove-br' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <!-- <div class="social">
@@ -491,7 +510,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <%= image_tag 'samples/logos/platinum/telenor.png', style: 'margin-top: 35px' %>
+        <%= image_tag 'samples/logos/platinum/telenor.png', class: 'remove-br', style: 'margin-top: 35px' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <!-- <div class="social">
@@ -524,7 +543,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-       <%= image_tag 'samples/logos/platinum/appsynth.png', style: 'margin-top: 35px'  %>
+       <%= image_tag 'samples/logos/platinum/appsynth.png', class: 'remove-br', style: 'margin-top: 35px'  %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <!-- <div class="social">
