--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -28,8 +28,8 @@
 <section class="banner" id="home">
   <div class="inner">
     <div class="content">
-      <h1>RUBY CONFERENCE</h1>
-      <h3>26th of August, 2015</h3>
+      <h1>DevCon Bangkok</h1>
+      <h3>March, 2016</h3>
       <h4>Bangkok, Thailand</h4>
       <div>
         <a href="#register" class="btn btn-primary btn-lg">Register and stand a <br> chance to win a <span>Macbook</span></a>
@@ -217,14 +217,14 @@
   <div class="inner-bt">
     <div class="content">
       <h1>Venue</h1>
-      <h2>Pocket Play Labs</h2>
+      <h2>TBC</h2>
       <h3>Bangkok, Thailand</h3>
       </div><!-- /content -->
       </div><!-- /inner -->
 </section><!-- /section -->
 <section class="map">
   <div class="map-canvas">
-    <iframe width="100%" height="650" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=Bangkok%2BPocket%2BPlay%2BLabs&ie=UTF8&z=15&t=m&iwloc=near&output=embed"></iframe>
+    <iframe width="100%" height="650" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=Bangkok&ie=UTF8&z=15&t=m&iwloc=near&output=embed"></iframe>
   </div>
 </section>
   <div class="section alt" id="sponsors">
